Prevent button groups and area rating stars from being wrapped

--- a/categories/static/edupy.css
+++ b/categories/static/edupy.css
@@ -9,3 +9,11 @@ textarea.form-control {
 textarea.form-control {
     font-family: "Menlo", "DejaVu Sans Mono", "Liberation Mono", "Consolas", "Ubuntu Mono", "Courier New", "andale mono", "lucida console", monospace;
 }
+
+.btn-group {
+    display: flex;
+}
+
+.area-rating {
+    display: flex;
+}
